etapa5(suya/old y.output
   0  $accept : program $end

   1  program : vardec program
   2          | fundec program
   3          |

   4  vardec : vartype TK_IDENTIFIER ':' varlit ';'
   5         | vartype '$' TK_IDENTIFIER ':' varlit ';'
   6         | vartype TK_IDENTIFIER '[' LIT_INTEGER ']' ';'
   7         | vartype TK_IDENTIFIER '[' LIT_INTEGER ']' ':' listlit ';'

   8  listlit : varlit listlit
   9          |

  10  varlit : LIT_INTEGER
  11         | LIT_FALSE
  12         | LIT_TRUE
  13         | LIT_CHAR
  14         | LIT_STRING

  15  vartype : KW_WORD
  16          | KW_BOOL
  17          | KW_BYTE

  18  fundec : vartype TK_IDENTIFIER '(' arguments ')' listlocaldec body

  19  arguments : vazio
  20            | listarg

  21  listarg : vartype TK_IDENTIFIER ',' listarg
  22          | vartype TK_IDENTIFIER

  23  vazio :

  24  listlocaldec : localdec listlocaldec
  25               |

  26  localdec : vartype TK_IDENTIFIER ':' varlit ';'
  27           | vartype '$' TK_IDENTIFIER ':' varlit ';'

  28  body : '{' listcom '}'

  29  listcom : com ';' listcom
  30          |

  31  com : TK_IDENTIFIER '=' exp
  32      | TK_IDENTIFIER '[' exp ']' '=' exp
  33      | KW_INPUT TK_IDENTIFIER
  34      | KW_OUTPUT listout
  35      | KW_RETURN exp
  36      | KW_IF '(' exp ')' KW_THEN com
  37      | KW_IF '(' exp ')' KW_THEN com KW_ELSE com
  38      | KW_LOOP '(' exp ')' com
  39      | body

  40  listout : LIT_STRING ',' listout
  41          | exp ',' listout
  42          | LIT_STRING
  43          | exp

  44  exp : TK_IDENTIFIER
  45      | TK_IDENTIFIER '[' exp ']'
  46      | varlit
  47      | '(' exp ')'
  48      | exp op exp
  49      | TK_IDENTIFIER '(' param ')'
  50      | '&' TK_IDENTIFIER
  51      | '*' TK_IDENTIFIER

  52  param : vazio
  53        | listparam

  54  listparam : exp ',' listparam
  55            | exp

  56  op : OPERATOR_LE
  57     | OPERATOR_GE
  58     | OPERATOR_EQ
  59     | OPERATOR_NE
  60     | OPERATOR_AND
  61     | OPERATOR_OR
  62     | '+'
  63     | '-'
  64     | '*'
  65     | '/'
  66     | '<'
  67     | '>'
  68     | '='
  69     | '!'

state 0
	$accept : . program $end  (0)
	program : .  (3)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	$end  reduce 3

	program  goto 4
	vartype  goto 5
	vardec  goto 6
	fundec  goto 7


state 1
	vartype : KW_WORD .  (15)

	.  reduce 15


state 2
	vartype : KW_BOOL .  (16)

	.  reduce 16


state 3
	vartype : KW_BYTE .  (17)

	.  reduce 17


state 4
	$accept : program . $end  (0)

	$end  accept


state 5
	vardec : vartype . TK_IDENTIFIER ':' varlit ';'  (4)
	vardec : vartype . '$' TK_IDENTIFIER ':' varlit ';'  (5)
	vardec : vartype . TK_IDENTIFIER '[' LIT_INTEGER ']' ';'  (6)
	vardec : vartype . TK_IDENTIFIER '[' LIT_INTEGER ']' ':' listlit ';'  (7)
	fundec : vartype . TK_IDENTIFIER '(' arguments ')' listlocaldec body  (18)

	TK_IDENTIFIER  shift 8
	'$'  shift 9
	.  error


state 6
	program : vardec . program  (1)
	program : .  (3)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	$end  reduce 3

	program  goto 10
	vartype  goto 5
	vardec  goto 6
	fundec  goto 7


state 7
	program : fundec . program  (2)
	program : .  (3)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	$end  reduce 3

	program  goto 11
	vartype  goto 5
	vardec  goto 6
	fundec  goto 7


state 8
	vardec : vartype TK_IDENTIFIER . ':' varlit ';'  (4)
	vardec : vartype TK_IDENTIFIER . '[' LIT_INTEGER ']' ';'  (6)
	vardec : vartype TK_IDENTIFIER . '[' LIT_INTEGER ']' ':' listlit ';'  (7)
	fundec : vartype TK_IDENTIFIER . '(' arguments ')' listlocaldec body  (18)

	':'  shift 12
	'['  shift 13
	'('  shift 14
	.  error


state 9
	vardec : vartype '$' . TK_IDENTIFIER ':' varlit ';'  (5)

	TK_IDENTIFIER  shift 15
	.  error


state 10
	program : vardec program .  (1)

	.  reduce 1


state 11
	program : fundec program .  (2)

	.  reduce 2


state 12
	vardec : vartype TK_IDENTIFIER ':' . varlit ';'  (4)

	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 20
	.  error

	varlit  goto 21


state 13
	vardec : vartype TK_IDENTIFIER '[' . LIT_INTEGER ']' ';'  (6)
	vardec : vartype TK_IDENTIFIER '[' . LIT_INTEGER ']' ':' listlit ';'  (7)

	LIT_INTEGER  shift 22
	.  error


state 14
	fundec : vartype TK_IDENTIFIER '(' . arguments ')' listlocaldec body  (18)
	vazio : .  (23)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	')'  reduce 23

	vartype  goto 23
	arguments  goto 24
	vazio  goto 25
	listarg  goto 26


state 15
	vardec : vartype '$' TK_IDENTIFIER . ':' varlit ';'  (5)

	':'  shift 27
	.  error


state 16
	varlit : LIT_INTEGER .  (10)

	.  reduce 10


state 17
	varlit : LIT_FALSE .  (11)

	.  reduce 11


state 18
	varlit : LIT_TRUE .  (12)

	.  reduce 12


state 19
	varlit : LIT_CHAR .  (13)

	.  reduce 13


state 20
	varlit : LIT_STRING .  (14)

	.  reduce 14


state 21
	vardec : vartype TK_IDENTIFIER ':' varlit . ';'  (4)

	';'  shift 28
	.  error


state 22
	vardec : vartype TK_IDENTIFIER '[' LIT_INTEGER . ']' ';'  (6)
	vardec : vartype TK_IDENTIFIER '[' LIT_INTEGER . ']' ':' listlit ';'  (7)

	']'  shift 29
	.  error


state 23
	listarg : vartype . TK_IDENTIFIER ',' listarg  (21)
	listarg : vartype . TK_IDENTIFIER  (22)

	TK_IDENTIFIER  shift 30
	.  error


state 24
	fundec : vartype TK_IDENTIFIER '(' arguments . ')' listlocaldec body  (18)

	')'  shift 31
	.  error


state 25
	arguments : vazio .  (19)

	.  reduce 19


state 26
	arguments : listarg .  (20)

	.  reduce 20


state 27
	vardec : vartype '$' TK_IDENTIFIER ':' . varlit ';'  (5)

	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 20
	.  error

	varlit  goto 32


state 28
	vardec : vartype TK_IDENTIFIER ':' varlit ';' .  (4)

	.  reduce 4


state 29
	vardec : vartype TK_IDENTIFIER '[' LIT_INTEGER ']' . ';'  (6)
	vardec : vartype TK_IDENTIFIER '[' LIT_INTEGER ']' . ':' listlit ';'  (7)

	':'  shift 33
	';'  shift 34
	.  error


state 30
	listarg : vartype TK_IDENTIFIER . ',' listarg  (21)
	listarg : vartype TK_IDENTIFIER .  (22)

	','  shift 35
	')'  reduce 22


state 31
	fundec : vartype TK_IDENTIFIER '(' arguments ')' . listlocaldec body  (18)
	listlocaldec : .  (25)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	'{'  reduce 25

	vartype  goto 36
	listlocaldec  goto 37
	localdec  goto 38


state 32
	vardec : vartype '$' TK_IDENTIFIER ':' varlit . ';'  (5)

	';'  shift 39
	.  error


state 33
	vardec : vartype TK_IDENTIFIER '[' LIT_INTEGER ']' ':' . listlit ';'  (7)
	listlit : .  (9)

	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 20
	';'  reduce 9

	varlit  goto 40
	listlit  goto 41


state 34
	vardec : vartype TK_IDENTIFIER '[' LIT_INTEGER ']' ';' .  (6)

	.  reduce 6


state 35
	listarg : vartype TK_IDENTIFIER ',' . listarg  (21)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	.  error

	vartype  goto 23
	listarg  goto 42


state 36
	localdec : vartype . TK_IDENTIFIER ':' varlit ';'  (26)
	localdec : vartype . '$' TK_IDENTIFIER ':' varlit ';'  (27)

	TK_IDENTIFIER  shift 43
	'$'  shift 44
	.  error


state 37
	fundec : vartype TK_IDENTIFIER '(' arguments ')' listlocaldec . body  (18)

	'{'  shift 45
	.  error

	body  goto 46


state 38
	listlocaldec : localdec . listlocaldec  (24)
	listlocaldec : .  (25)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	'{'  reduce 25

	vartype  goto 36
	listlocaldec  goto 47
	localdec  goto 38


state 39
	vardec : vartype '$' TK_IDENTIFIER ':' varlit ';' .  (5)

	.  reduce 5


state 40
	listlit : varlit . listlit  (8)
	listlit : .  (9)

	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 20
	';'  reduce 9

	varlit  goto 40
	listlit  goto 48


state 41
	vardec : vartype TK_IDENTIFIER '[' LIT_INTEGER ']' ':' listlit . ';'  (7)

	';'  shift 49
	.  error


state 42
	listarg : vartype TK_IDENTIFIER ',' listarg .  (21)

	.  reduce 21


state 43
	localdec : vartype TK_IDENTIFIER . ':' varlit ';'  (26)

	':'  shift 50
	.  error


state 44
	localdec : vartype '$' . TK_IDENTIFIER ':' varlit ';'  (27)

	TK_IDENTIFIER  shift 51
	.  error


state 45
	body : '{' . listcom '}'  (28)
	listcom : .  (30)

	KW_IF  shift 52
	KW_LOOP  shift 53
	KW_INPUT  shift 54
	KW_RETURN  shift 55
	KW_OUTPUT  shift 56
	TK_IDENTIFIER  shift 57
	'{'  shift 45
	'}'  reduce 30

	body  goto 58
	listcom  goto 59
	com  goto 60


state 46
	fundec : vartype TK_IDENTIFIER '(' arguments ')' listlocaldec body .  (18)

	.  reduce 18


state 47
	listlocaldec : localdec listlocaldec .  (24)

	.  reduce 24


state 48
	listlit : varlit listlit .  (8)

	.  reduce 8


state 49
	vardec : vartype TK_IDENTIFIER '[' LIT_INTEGER ']' ':' listlit ';' .  (7)

	.  reduce 7


state 50
	localdec : vartype TK_IDENTIFIER ':' . varlit ';'  (26)

	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 20
	.  error

	varlit  goto 61


state 51
	localdec : vartype '$' TK_IDENTIFIER . ':' varlit ';'  (27)

	':'  shift 62
	.  error


state 52
	com : KW_IF . '(' exp ')' KW_THEN com  (36)
	com : KW_IF . '(' exp ')' KW_THEN com KW_ELSE com  (37)

	'('  shift 63
	.  error


state 53
	com : KW_LOOP . '(' exp ')' com  (38)

	'('  shift 64
	.  error


state 54
	com : KW_INPUT . TK_IDENTIFIER  (33)

	TK_IDENTIFIER  shift 65
	.  error


state 55
	com : KW_RETURN . exp  (35)

	TK_IDENTIFIER  shift 66
	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 20
	'('  shift 67
	'&'  shift 68
	'*'  shift 69
	.  error

	varlit  goto 70
	exp  goto 71


state 56
	com : KW_OUTPUT . listout  (34)

	TK_IDENTIFIER  shift 66
	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 72
	'('  shift 67
	'&'  shift 68
	'*'  shift 69
	.  error

	varlit  goto 70
	exp  goto 73
	listout  goto 74


state 57
	com : TK_IDENTIFIER . '=' exp  (31)
	com : TK_IDENTIFIER . '[' exp ']' '=' exp  (32)

	'['  shift 75
	'='  shift 76
	.  error


state 58
	com : body .  (39)

	.  reduce 39


state 59
	body : '{' listcom . '}'  (28)

	'}'  shift 77
	.  error


state 60
	listcom : com . ';' listcom  (29)

	';'  shift 78
	.  error


state 61
	localdec : vartype TK_IDENTIFIER ':' varlit . ';'  (26)

	';'  shift 79
	.  error


state 62
	localdec : vartype '$' TK_IDENTIFIER ':' . varlit ';'  (27)

	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 20
	.  error

	varlit  goto 80


state 63
	com : KW_IF '(' . exp ')' KW_THEN com  (36)
	com : KW_IF '(' . exp ')' KW_THEN com KW_ELSE com  (37)

	TK_IDENTIFIER  shift 66
	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 20
	'('  shift 67
	'&'  shift 68
	'*'  shift 69
	.  error

	varlit  goto 70
	exp  goto 81


state 64
	com : KW_LOOP '(' . exp ')' com  (38)

	TK_IDENTIFIER  shift 66
	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 20
	'('  shift 67
	'&'  shift 68
	'*'  shift 69
	.  error

	varlit  goto 70
	exp  goto 82


state 65
	com : KW_INPUT TK_IDENTIFIER .  (33)

	.  reduce 33


state 66
	exp : TK_IDENTIFIER .  (44)
	exp : TK_IDENTIFIER . '[' exp ']'  (45)
	exp : TK_IDENTIFIER . '(' param ')'  (49)

	'['  shift 83
	'('  shift 84
	KW_ELSE  reduce 44
	OPERATOR_LE  reduce 44
	OPERATOR_GE  reduce 44
	OPERATOR_EQ  reduce 44
	OPERATOR_NE  reduce 44
	OPERATOR_AND  reduce 44
	OPERATOR_OR  reduce 44
	';'  reduce 44
	']'  reduce 44
	')'  reduce 44
	','  reduce 44
	'='  reduce 44
	'*'  reduce 44
	'+'  reduce 44
	'-'  reduce 44
	'/'  reduce 44
	'<'  reduce 44
	'>'  reduce 44
	'!'  reduce 44


state 67
	exp : '(' . exp ')'  (47)

	TK_IDENTIFIER  shift 66
	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 20
	'('  shift 67
	'&'  shift 68
	'*'  shift 69
	.  error

	varlit  goto 70
	exp  goto 85


state 68
	exp : '&' . TK_IDENTIFIER  (50)

	TK_IDENTIFIER  shift 86
	.  error


state 69
	exp : '*' . TK_IDENTIFIER  (51)

	TK_IDENTIFIER  shift 87
	.  error


state 70
	exp : varlit .  (46)

	.  reduce 46


state 71
	com : KW_RETURN exp .  (35)
	exp : exp . op exp  (48)

	OPERATOR_LE  shift 88
	OPERATOR_GE  shift 89
	OPERATOR_EQ  shift 90
	OPERATOR_NE  shift 91
	OPERATOR_AND  shift 92
	OPERATOR_OR  shift 93
	'='  shift 94
	'*'  shift 95
	'+'  shift 96
	'-'  shift 97
	'/'  shift 98
	'<'  shift 99
	'>'  shift 100
	'!'  shift 101
	KW_ELSE  reduce 35
	';'  reduce 35

	op  goto 102


72: reduce/reduce conflict (reduce 14, reduce 42) on KW_ELSE
72: reduce/reduce conflict (reduce 14, reduce 42) on ';'
72: shift/reduce conflict (shift 103, reduce 14) on ','
state 72
	varlit : LIT_STRING .  (14)
	listout : LIT_STRING . ',' listout  (40)
	listout : LIT_STRING .  (42)

	','  shift 103
	KW_ELSE  reduce 14
	OPERATOR_LE  reduce 14
	OPERATOR_GE  reduce 14
	OPERATOR_EQ  reduce 14
	OPERATOR_NE  reduce 14
	OPERATOR_AND  reduce 14
	OPERATOR_OR  reduce 14
	';'  reduce 14
	'='  reduce 14
	'*'  reduce 14
	'+'  reduce 14
	'-'  reduce 14
	'/'  reduce 14
	'<'  reduce 14
	'>'  reduce 14
	'!'  reduce 14


state 73
	listout : exp . ',' listout  (41)
	listout : exp .  (43)
	exp : exp . op exp  (48)

	OPERATOR_LE  shift 88
	OPERATOR_GE  shift 89
	OPERATOR_EQ  shift 90
	OPERATOR_NE  shift 91
	OPERATOR_AND  shift 92
	OPERATOR_OR  shift 93
	','  shift 104
	'='  shift 94
	'*'  shift 95
	'+'  shift 96
	'-'  shift 97
	'/'  shift 98
	'<'  shift 99
	'>'  shift 100
	'!'  shift 101
	KW_ELSE  reduce 43
	';'  reduce 43

	op  goto 102


state 74
	com : KW_OUTPUT listout .  (34)

	.  reduce 34


state 75
	com : TK_IDENTIFIER '[' . exp ']' '=' exp  (32)

	TK_IDENTIFIER  shift 66
	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 20
	'('  shift 67
	'&'  shift 68
	'*'  shift 69
	.  error

	varlit  goto 70
	exp  goto 105


state 76
	com : TK_IDENTIFIER '=' . exp  (31)

	TK_IDENTIFIER  shift 66
	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 20
	'('  shift 67
	'&'  shift 68
	'*'  shift 69
	.  error

	varlit  goto 70
	exp  goto 106


state 77
	body : '{' listcom '}' .  (28)

	.  reduce 28


state 78
	listcom : com ';' . listcom  (29)
	listcom : .  (30)

	KW_IF  shift 52
	KW_LOOP  shift 53
	KW_INPUT  shift 54
	KW_RETURN  shift 55
	KW_OUTPUT  shift 56
	TK_IDENTIFIER  shift 57
	'{'  shift 45
	'}'  reduce 30

	body  goto 58
	listcom  goto 107
	com  goto 60


state 79
	localdec : vartype TK_IDENTIFIER ':' varlit ';' .  (26)

	.  reduce 26


state 80
	localdec : vartype '$' TK_IDENTIFIER ':' varlit . ';'  (27)

	';'  shift 108
	.  error


state 81
	com : KW_IF '(' exp . ')' KW_THEN com  (36)
	com : KW_IF '(' exp . ')' KW_THEN com KW_ELSE com  (37)
	exp : exp . op exp  (48)

	OPERATOR_LE  shift 88
	OPERATOR_GE  shift 89
	OPERATOR_EQ  shift 90
	OPERATOR_NE  shift 91
	OPERATOR_AND  shift 92
	OPERATOR_OR  shift 93
	')'  shift 109
	'='  shift 94
	'*'  shift 95
	'+'  shift 96
	'-'  shift 97
	'/'  shift 98
	'<'  shift 99
	'>'  shift 100
	'!'  shift 101
	.  error

	op  goto 102


state 82
	com : KW_LOOP '(' exp . ')' com  (38)
	exp : exp . op exp  (48)

	OPERATOR_LE  shift 88
	OPERATOR_GE  shift 89
	OPERATOR_EQ  shift 90
	OPERATOR_NE  shift 91
	OPERATOR_AND  shift 92
	OPERATOR_OR  shift 93
	')'  shift 110
	'='  shift 94
	'*'  shift 95
	'+'  shift 96
	'-'  shift 97
	'/'  shift 98
	'<'  shift 99
	'>'  shift 100
	'!'  shift 101
	.  error

	op  goto 102


state 83
	exp : TK_IDENTIFIER '[' . exp ']'  (45)

	TK_IDENTIFIER  shift 66
	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 20
	'('  shift 67
	'&'  shift 68
	'*'  shift 69
	.  error

	varlit  goto 70
	exp  goto 111


state 84
	exp : TK_IDENTIFIER '(' . param ')'  (49)
	vazio : .  (23)

	TK_IDENTIFIER  shift 66
	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 20
	'('  shift 67
	'&'  shift 68
	'*'  shift 69
	')'  reduce 23

	varlit  goto 70
	vazio  goto 112
	exp  goto 113
	param  goto 114
	listparam  goto 115


state 85
	exp : '(' exp . ')'  (47)
	exp : exp . op exp  (48)

	OPERATOR_LE  shift 88
	OPERATOR_GE  shift 89
	OPERATOR_EQ  shift 90
	OPERATOR_NE  shift 91
	OPERATOR_AND  shift 92
	OPERATOR_OR  shift 93
	')'  shift 116
	'='  shift 94
	'*'  shift 95
	'+'  shift 96
	'-'  shift 97
	'/'  shift 98
	'<'  shift 99
	'>'  shift 100
	'!'  shift 101
	.  error

	op  goto 102


state 86
	exp : '&' TK_IDENTIFIER .  (50)

	.  reduce 50


state 87
	exp : '*' TK_IDENTIFIER .  (51)

	.  reduce 51


state 88
	op : OPERATOR_LE .  (56)

	.  reduce 56


state 89
	op : OPERATOR_GE .  (57)

	.  reduce 57


state 90
	op : OPERATOR_EQ .  (58)

	.  reduce 58


state 91
	op : OPERATOR_NE .  (59)

	.  reduce 59


state 92
	op : OPERATOR_AND .  (60)

	.  reduce 60


state 93
	op : OPERATOR_OR .  (61)

	.  reduce 61


state 94
	op : '=' .  (68)

	.  reduce 68


state 95
	op : '*' .  (64)

	.  reduce 64


state 96
	op : '+' .  (62)

	.  reduce 62


state 97
	op : '-' .  (63)

	.  reduce 63


state 98
	op : '/' .  (65)

	.  reduce 65


state 99
	op : '<' .  (66)

	.  reduce 66


state 100
	op : '>' .  (67)

	.  reduce 67


state 101
	op : '!' .  (69)

	.  reduce 69


state 102
	exp : exp op . exp  (48)

	TK_IDENTIFIER  shift 66
	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 20
	'('  shift 67
	'&'  shift 68
	'*'  shift 69
	.  error

	varlit  goto 70
	exp  goto 117


state 103
	listout : LIT_STRING ',' . listout  (40)

	TK_IDENTIFIER  shift 66
	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 72
	'('  shift 67
	'&'  shift 68
	'*'  shift 69
	.  error

	varlit  goto 70
	exp  goto 73
	listout  goto 118


state 104
	listout : exp ',' . listout  (41)

	TK_IDENTIFIER  shift 66
	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 72
	'('  shift 67
	'&'  shift 68
	'*'  shift 69
	.  error

	varlit  goto 70
	exp  goto 73
	listout  goto 119


state 105
	com : TK_IDENTIFIER '[' exp . ']' '=' exp  (32)
	exp : exp . op exp  (48)

	OPERATOR_LE  shift 88
	OPERATOR_GE  shift 89
	OPERATOR_EQ  shift 90
	OPERATOR_NE  shift 91
	OPERATOR_AND  shift 92
	OPERATOR_OR  shift 93
	']'  shift 120
	'='  shift 94
	'*'  shift 95
	'+'  shift 96
	'-'  shift 97
	'/'  shift 98
	'<'  shift 99
	'>'  shift 100
	'!'  shift 101
	.  error

	op  goto 102


state 106
	com : TK_IDENTIFIER '=' exp .  (31)
	exp : exp . op exp  (48)

	OPERATOR_LE  shift 88
	OPERATOR_GE  shift 89
	OPERATOR_EQ  shift 90
	OPERATOR_NE  shift 91
	OPERATOR_AND  shift 92
	OPERATOR_OR  shift 93
	'='  shift 94
	'*'  shift 95
	'+'  shift 96
	'-'  shift 97
	'/'  shift 98
	'<'  shift 99
	'>'  shift 100
	'!'  shift 101
	KW_ELSE  reduce 31
	';'  reduce 31

	op  goto 102


state 107
	listcom : com ';' listcom .  (29)

	.  reduce 29


state 108
	localdec : vartype '$' TK_IDENTIFIER ':' varlit ';' .  (27)

	.  reduce 27


state 109
	com : KW_IF '(' exp ')' . KW_THEN com  (36)
	com : KW_IF '(' exp ')' . KW_THEN com KW_ELSE com  (37)

	KW_THEN  shift 121
	.  error


state 110
	com : KW_LOOP '(' exp ')' . com  (38)

	KW_IF  shift 52
	KW_LOOP  shift 53
	KW_INPUT  shift 54
	KW_RETURN  shift 55
	KW_OUTPUT  shift 56
	TK_IDENTIFIER  shift 57
	'{'  shift 45
	.  error

	body  goto 58
	com  goto 122


state 111
	exp : TK_IDENTIFIER '[' exp . ']'  (45)
	exp : exp . op exp  (48)

	OPERATOR_LE  shift 88
	OPERATOR_GE  shift 89
	OPERATOR_EQ  shift 90
	OPERATOR_NE  shift 91
	OPERATOR_AND  shift 92
	OPERATOR_OR  shift 93
	']'  shift 123
	'='  shift 94
	'*'  shift 95
	'+'  shift 96
	'-'  shift 97
	'/'  shift 98
	'<'  shift 99
	'>'  shift 100
	'!'  shift 101
	.  error

	op  goto 102


state 112
	param : vazio .  (52)

	.  reduce 52


state 113
	exp : exp . op exp  (48)
	listparam : exp . ',' listparam  (54)
	listparam : exp .  (55)

	OPERATOR_LE  shift 88
	OPERATOR_GE  shift 89
	OPERATOR_EQ  shift 90
	OPERATOR_NE  shift 91
	OPERATOR_AND  shift 92
	OPERATOR_OR  shift 93
	','  shift 124
	'='  shift 94
	'*'  shift 95
	'+'  shift 96
	'-'  shift 97
	'/'  shift 98
	'<'  shift 99
	'>'  shift 100
	'!'  shift 101
	')'  reduce 55

	op  goto 102


state 114
	exp : TK_IDENTIFIER '(' param . ')'  (49)

	')'  shift 125
	.  error


state 115
	param : listparam .  (53)

	.  reduce 53


state 116
	exp : '(' exp ')' .  (47)

	.  reduce 47


117: shift/reduce conflict (shift 88, reduce 48) on OPERATOR_LE
117: shift/reduce conflict (shift 89, reduce 48) on OPERATOR_GE
117: shift/reduce conflict (shift 90, reduce 48) on OPERATOR_EQ
117: shift/reduce conflict (shift 91, reduce 48) on OPERATOR_NE
117: shift/reduce conflict (shift 92, reduce 48) on OPERATOR_AND
117: shift/reduce conflict (shift 93, reduce 48) on OPERATOR_OR
117: shift/reduce conflict (shift 94, reduce 48) on '='
117: shift/reduce conflict (shift 95, reduce 48) on '*'
117: shift/reduce conflict (shift 96, reduce 48) on '+'
117: shift/reduce conflict (shift 97, reduce 48) on '-'
117: shift/reduce conflict (shift 98, reduce 48) on '/'
117: shift/reduce conflict (shift 99, reduce 48) on '<'
117: shift/reduce conflict (shift 100, reduce 48) on '>'
117: shift/reduce conflict (shift 101, reduce 48) on '!'
state 117
	exp : exp . op exp  (48)
	exp : exp op exp .  (48)

	OPERATOR_LE  shift 88
	OPERATOR_GE  shift 89
	OPERATOR_EQ  shift 90
	OPERATOR_NE  shift 91
	OPERATOR_AND  shift 92
	OPERATOR_OR  shift 93
	'='  shift 94
	'*'  shift 95
	'+'  shift 96
	'-'  shift 97
	'/'  shift 98
	'<'  shift 99
	'>'  shift 100
	'!'  shift 101
	KW_ELSE  reduce 48
	';'  reduce 48
	']'  reduce 48
	')'  reduce 48
	','  reduce 48

	op  goto 102


state 118
	listout : LIT_STRING ',' listout .  (40)

	.  reduce 40


state 119
	listout : exp ',' listout .  (41)

	.  reduce 41


state 120
	com : TK_IDENTIFIER '[' exp ']' . '=' exp  (32)

	'='  shift 126
	.  error


state 121
	com : KW_IF '(' exp ')' KW_THEN . com  (36)
	com : KW_IF '(' exp ')' KW_THEN . com KW_ELSE com  (37)

	KW_IF  shift 52
	KW_LOOP  shift 53
	KW_INPUT  shift 54
	KW_RETURN  shift 55
	KW_OUTPUT  shift 56
	TK_IDENTIFIER  shift 57
	'{'  shift 45
	.  error

	body  goto 58
	com  goto 127


state 122
	com : KW_LOOP '(' exp ')' com .  (38)

	.  reduce 38


state 123
	exp : TK_IDENTIFIER '[' exp ']' .  (45)

	.  reduce 45


state 124
	listparam : exp ',' . listparam  (54)

	TK_IDENTIFIER  shift 66
	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 20
	'('  shift 67
	'&'  shift 68
	'*'  shift 69
	.  error

	varlit  goto 70
	exp  goto 113
	listparam  goto 128


state 125
	exp : TK_IDENTIFIER '(' param ')' .  (49)

	.  reduce 49


state 126
	com : TK_IDENTIFIER '[' exp ']' '=' . exp  (32)

	TK_IDENTIFIER  shift 66
	LIT_INTEGER  shift 16
	LIT_FALSE  shift 17
	LIT_TRUE  shift 18
	LIT_CHAR  shift 19
	LIT_STRING  shift 20
	'('  shift 67
	'&'  shift 68
	'*'  shift 69
	.  error

	varlit  goto 70
	exp  goto 129


127: shift/reduce conflict (shift 130, reduce 36) on KW_ELSE
state 127
	com : KW_IF '(' exp ')' KW_THEN com .  (36)
	com : KW_IF '(' exp ')' KW_THEN com . KW_ELSE com  (37)

	KW_ELSE  shift 130
	';'  reduce 36


state 128
	listparam : exp ',' listparam .  (54)

	.  reduce 54


state 129
	com : TK_IDENTIFIER '[' exp ']' '=' exp .  (32)
	exp : exp . op exp  (48)

	OPERATOR_LE  shift 88
	OPERATOR_GE  shift 89
	OPERATOR_EQ  shift 90
	OPERATOR_NE  shift 91
	OPERATOR_AND  shift 92
	OPERATOR_OR  shift 93
	'='  shift 94
	'*'  shift 95
	'+'  shift 96
	'-'  shift 97
	'/'  shift 98
	'<'  shift 99
	'>'  shift 100
	'!'  shift 101
	KW_ELSE  reduce 32
	';'  reduce 32

	op  goto 102


state 130
	com : KW_IF '(' exp ')' KW_THEN com KW_ELSE . com  (37)

	KW_IF  shift 52
	KW_LOOP  shift 53
	KW_INPUT  shift 54
	KW_RETURN  shift 55
	KW_OUTPUT  shift 56
	TK_IDENTIFIER  shift 57
	'{'  shift 45
	.  error

	body  goto 58
	com  goto 131


state 131
	com : KW_IF '(' exp ')' KW_THEN com KW_ELSE com .  (37)

	.  reduce 37


Rules never reduced:
	listout : LIT_STRING  (42)


State 72 contains 1 shift/reduce conflict, 2 reduce/reduce conflicts.
State 117 contains 14 shift/reduce conflicts.
State 127 contains 1 shift/reduce conflict.


43 terminals, 20 nonterminals
70 grammar rules, 132 states
